--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.1.1",
     "laravel-mix": "0.*",
     "lodash": "^4.17.4",
+    "plyr": "^2.0.13",
     "vue": "^2.1.10"
   }
 }
